name:                bossvault
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/rjosephwright/bossvault-haskell
license:             BSD3
license-file:        LICENSE
author:              Joseph Wright
maintainer:          rjosephwright@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Vault
                     , Vault.Aws
                     , Vault.DataStore
                     , Vault.Types
  build-depends:       base >= 4.7 && < 5
                     , directory >= 1.2.2.0
  default-language:    Haskell2010
  build-depends:       base
                     , amazonka
                     , amazonka-kms
                     , bytestring
                     , cryptonite
                     , exceptions
                     , errors
                     , containers
                     , lens
                     , memory
                     , mtl
                     , resourcet
                     , text
                     , transformers

test-suite bossvault-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bossvault
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rjosephwright/bossvault-haskell
